[ADD] ceppp_patient_partenaire: button add consentement file attachment

--- a/ceppp_patient_partenaire/views/ceppp_recruteur.xml
+++ b/ceppp_patient_partenaire/views/ceppp_recruteur.xml
@@ -5,6 +5,15 @@
         <field name="model">ceppp.recruteur</field>
         <field name="arch" type="xml">
             <form string="Titre">
+                <header>
+                    <widget
+                        name="attach_document"
+                        string="Ajouter document consentement"
+                        action="message_post"
+                        highlight="1"
+                        attrs="{'invisible': ['|',('consentement_file', '!=', False), ('id','=',False)]}"
+                    />
+                </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button class="oe_stat_button" icon="fa-archive" name="toggle_active" type="object">
