--- a/ceppp_patient_partenaire/views/portal_templates.xml
+++ b/ceppp_patient_partenaire/views/portal_templates.xml
@@ -51,7 +51,11 @@
                     <i class="fa fa-check" t-if="ceppp_recruteur.consentement_recherche" />
                     <i class="fa fa-times" t-if="not ceppp_recruteur.consentement_recherche" />
                     Recherche
-                    <div t-if="ceppp_recruteur.consentement_file"><a t-att-href="ceppp_recruteur.consentement_file.website_url">Formulaire d'information et de consentement</a></div>
+                    <div t-if="ceppp_recruteur.consentement_file">
+                        <a t-att-href="ceppp_recruteur.consentement_file.website_url">
+                            Formulaire d'information et de consentement
+                        </a>
+                    </div>
                 </div>
                 <div class="modal fade modal_modifier_consentement" role="dialog" aria-hidden="true">
                     <div class="modal-dialog">
@@ -247,13 +251,7 @@
                                     <button t-attf-class="btn btn-primary modifier_preference_confirm">
                                         Confirmer
                                     </button>
-                                    <button
-                                        type="button"
-                                        class="close"
-                                        data-dismiss="modal"
-                                    >
-                                        Annuler
-                                    </button>
+                                    <button type="button" class="close" data-dismiss="modal">Annuler</button>
                                 </div>
                             </div>
                         </form>
