[ADD] ceppp_patient_partenaire: WidgetResPartnerCepppDiscuss
- Add a button string «Clavardage» on contact res.partner form and
redirect to mail discuss with this internal contact.
- This is only available for admin or recrutor

--- a/ceppp_patient_partenaire/views/res_partner.xml
+++ b/ceppp_patient_partenaire/views/res_partner.xml
@@ -56,7 +56,20 @@
                         Fiche recruteur
                     </button>
                 </xpath>
+                <sheet position="before">
+                    <header>
+                        <widget
+                            name="widget_redirect_from_res_partner_to_discuss"
+                            attrs="{'invisible':[('ceppp_entity','not in',['recruteur','administrateur'])]}"
+                        />
+                    </header>
+                </sheet>
             </field>
         </record>
     </data>
+    <template id="assets_backend" name="ceppp backend assets" inherit_id="web.assets_backend">
+        <xpath expr="." position="inside">
+            <script type="text/javascript" src="/ceppp_patient_partenaire/static/src/js/res_partner.js" />
+        </xpath>
+    </template>
 </odoo>
