--- a/ceppp_patient_partenaire/views/ceppp_formation.xml
+++ b/ceppp_patient_partenaire/views/ceppp_formation.xml
@@ -21,9 +21,8 @@
                     <group>
                         <group>
                             <field name="organisation" />
-                        </group>
-                        <group>
                             <field name="date" widget="date" />
+                            <field name="date_fin" widget="date" />
                         </group>
                     </group>
                 </sheet>
@@ -92,6 +91,7 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="date" widget="date" />
+                <field name="date_fin" widget="date" />
                 <field name="titre_formation" widget="many2many_tags" />
                 <field name="titre_formation_is_autre" invisible="1" />
                 <field name="titre_formation_autre" attrs="{'invisible':[('titre_formation_is_autre','=',False)]}" />
