[FIX] ceppp_patient_partenaire: div autre formation suppose to hide by default

--- a/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
+++ b/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
@@ -697,7 +697,7 @@
                                                         </t>
                                                     </fieldset>
                                                 </div>
-                                                <div class="form-group" id="div_autre_titre_formation">
+                                                <div class="form-group" id="div_autre_formation">
                                                     <label for="titre_formation_autre">Autre formation :</label>
                                                     <input
                                                         type="text"
