--- a/ceppp_patient_partenaire/views/portal_templates.xml
+++ b/ceppp_patient_partenaire/views/portal_templates.xml
@@ -71,12 +71,6 @@
                                     class="ceppp_recruteur_id"
                                     t-att-value="ceppp_recruteur.id"
                                 />
-                                <input
-                                    type="hidden"
-                                    name="ceppp_recruteur_copy"
-                                    class="ceppp_recruteur_copy"
-                                    t-att-value="ceppp_recruteur_copy"
-                                />
                                 <header class="modal-header">
                                     <h4 class="modal-title">Modifier son consentement</h4>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -151,6 +145,9 @@
                         </a>
                     </h4>
                     <hr class="mt-1 mb-0" />
+                    <div class="text-right">
+                        <button id="close_portal_account">Fermer mon compte</button>
+                    </div>
                 </div>
                 <div class="modal fade modal_modifier_preference" role="dialog" aria-hidden="true">
                     <div class="modal-dialog">
