--- a/ceppp_patient_partenaire/views/res_partner.xml
+++ b/ceppp_patient_partenaire/views/res_partner.xml
@@ -66,6 +66,17 @@
                 </sheet>
             </field>
         </record>
+
+        <record id="contacts.action_contacts" model="ir.actions.act_window">
+            <field name="name">Contacts</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">res.partner</field>
+            <field name="view_mode">tree,kanban,form</field>
+            <field name="view_type">form</field>
+            <field name="context">
+                {'search_default_recruteur':1,'search_default_administrateur':1,'search_default_affiliation':1}
+            </field>
+        </record>
     </data>
     <template id="assets_backend" name="ceppp backend assets" inherit_id="web.assets_backend">
         <xpath expr="." position="inside">
